# chattertools

./: .env.example  .gitignore  LICENSE  README.md  pyproject.toml  requirements.txt
examples/: api_demo.py  api_machine_watcher.py  focas_example.py  focas_loop.py  focas_macro_read_write.py  focas_read_operator_messege.py  focas_status_fetch.py  focas_sysinfo_fetch.py
examples/Sharc/: AirPressureExample.py  Client.py  OnOffExample.py  PartCountExample.py  README.md  requirements.txt
src/chattertools/: __init__.py  chatter_client.py  chatter_requestor.py  focas.py  focas_structs.py  struct_decorator.py
src/chattertools/helpers/: parsers.py
src/chattertools/lib/: flist_all.json
src/chattertools/lib/Fwlib64/: Fwlib64.lib
src/chattertools/models/: __init__.py  data_type.py  machine.py  macro.py  transaction.py
src/chattertools/services/: machine_service.py  macro_service.py  service.py  state_service.py  transaction_service.py
tests/: test_client.py  test_focas.py  test_parsers.py  test_transactions.py
